finalise the project

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,17 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('./background_search_desktop.jpeg');
+  /* background-image: url('./background_search_desktop.jpeg'); */
+  background-image: url('./food.png');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 25rem;
+  height: 30rem;
+
 }
 
 .SearchBar-sort-options ul {
   display: flex;
   justify-content: center;
   margin-bottom: 2.22rem;
-  color: #ffffff;
+  /* color: #ffffff; */
+  color: #F7ECDE;
+
 }
 
 .SearchBar-sort-options li {
@@ -23,18 +27,20 @@
   line-height: 1.13;
   text-align: center;
   font-weight: 600;
-  font-size: .83rem;
+  font-size: .96rem;
   transition: color .25s;
 }
 
 .SearchBar-sort-options li:hover {
-  color: #d4cfcf;
+  /* color: #d4cfcf; */
+  color: #0078AA;
 }
 
 .SearchBar-sort-options li.active,
 .SearchBar-sort-options li.active:hover {
-  border-bottom: 1px solid #f0c36c;
-  color: #f0c36c;
+  border-bottom: 1px solid #0078AA;
+  /* color: #f0c36c; */
+  color: #0078AA;
 }
 
 .SearchBar-fields {
@@ -48,8 +54,8 @@
   padding: .66rem 1rem;
   margin-right: 2.22rem;
   border: 1px solid #fff;
-  border-radius: 4px;
-  font-size: .77rem;
+  border-radius: 6px;
+  font-size: .89rem;
   font-weight: 500;
 }
 
@@ -61,23 +67,53 @@
   text-align: center;
 }
 
-.SearchBar-submit a {
-  border-radius: 4px;
+.SearchBar-submit button {
+  border-radius: 7px;
   padding: .72rem 1.7rem;
-  background-color: #cca353;
+  /* background-color: #cca353; */
+  background-color: #0078AA;
   color: #ffffff;
   font-weight: 600;
   transition: background-color .5s;
+  font-size: 1rem;
 }
 
-.SearchBar-submit a:hover {
+.SearchBar-submit button:hover {
   cursor: pointer;
-  background-color: #a7874b;
+  /* background-color: #a7874b; */
+  background-color: #66BFBF;
+
 }
+
+
+
+@media only screen and (max-width: 1440px) and (min-width:560px) {
+  .SearchBar {
+    height: 25rem;
+  }
+
+  .SearchBar-sort-options ul {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .SearchBar-fields {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .SearchBar-fields input {
+    margin-right: 0;
+    margin-bottom: .86rem;
+  }
+
+}
+
+
 
 @media only screen and (max-width: 560px) {
   .SearchBar {
-    background-image: url('./background_search_mobile.jpeg');
+    height: 20rem;
   }
 
   .SearchBar-sort-options ul {
