--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@ input:focus {
 h1 {
   padding: .66rem 0;
   text-align: center;
-  background-color: #cca353;
+  /* background-color: #cca353; */
+  background-color: cadetblue;
   font-family: Poppins, sans-serif;
   font-size: 1.8rem;
   color: #fff;
